--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Leaflet Step-1</title>
   <link rel="shortcut icon" href="https://img.icons8.com/ultraviolet/40/000000/earthquakes.png"/>
-
+ <!-- D3 JavaScript -->
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script> -->
+  <script src="https://d3js.org/d3.v6.min.js"></script>
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -29,14 +31,15 @@
     crossorigin=""></script>
   <!-- Leaflet heatmap plugin -->
   <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
-  <!-- D3 JavaScript -->
-  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script> -->
-  <script src="https://d3js.org/d3.v6.min.js"></script>
+ 
 
   <!-- API key -->
   <script type="text/javascript" src="static/js/config.js"></script>
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
+  <!-- Part 2 JS -->
+  <script type="text/javascript" src="Leaflet-Step-2/static/plates.js"></script>
+
 </body>
 
 </html>
