tectonic plates overlay layer added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
   <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
   <!-- Part 2 JS -->
   <script type="text/javascript" src="Leaflet-Step-2/static/plates.js"></script>
+  <!-- <script type="text/javascript" src="Leaflet-Step-2/static/plates_2.js"></script> -->
+
 
 </body>
 
