--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Leaflet Step-1</title>
+  <title>Earthquake Mapping</title>
   <link rel="shortcut icon" href="https://img.icons8.com/ultraviolet/40/000000/earthquakes.png"/>
+  
  <!-- D3 JavaScript -->
-  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script> -->
   <script src="https://d3js.org/d3.v6.min.js"></script>
 
   <!-- Leaflet CSS -->
@@ -17,7 +17,7 @@
     crossorigin="" />
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="Leaflet-Step-1/static/css/style.css">
 </head>
 
 <body>
@@ -29,17 +29,17 @@
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
-  <!-- Leaflet heatmap plugin -->
-  <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
- 
+
+
 
   <!-- API key -->
   <script type="text/javascript" src="static/js/config.js"></script>
-  <!-- Our JavaScript -->
-  <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
-  <!-- Part 2 JS -->
-  <script type="text/javascript" src="Leaflet-Step-2/static/plates.js"></script>
-  <!-- <script type="text/javascript" src="Leaflet-Step-2/static/plates_2.js"></script> -->
+
+  <!-- Part 1 JavaScript -->
+  <!-- <script type="text/javascript" src="Leaflet-Step-1/static/js/logic.js"></script> -->
+
+  <!-- Part 2 JavaScript -->
+  <script type="text/javascript" src="Leaflet-Step-2/static/js/plates.js"></script>
 
 
 </body>
